# Winmem-Witness

./: CODE_OF_CONDUCT  DEPLOYMENT.md  README.md  Winmem_Structure  package.json
apps/: README.md
apps/api/: README.md  package.json  tsconfig.json
apps/api/prisma/: schema.prisma
apps/api/src/: main.ts  server.ts
apps/api/src/adapters/: blob.adapter.ts  llm.adapter.ts  queue.adapter.ts  solana.adapter.ts  storage.adapter.ts
apps/api/src/config/: env.ts
apps/api/src/middleware/: auth.ts  errorHandler.ts  rateLimit.ts  rbac.ts  requestId.ts  validation.ts
apps/api/src/routes/: admin.ts  archives.ts  audits.ts  auth.ts  events.ts  (+7 more)
apps/docs-site/: README.md
apps/indexer/: README.md  package.json  tsconfig.json
apps/indexer/src/: main.ts
apps/web/: README.md  package.json
apps/worker/: README.md  package.json  tsconfig.json
apps/worker/src/: main.ts
programs/: README.md
programs/winmem-anchor/: Anchor.toml  Cargo.toml  README.md  package.json  tsconfig.json
programs/winmem-anchor/migrations/: deploy.ts
programs/winmem-anchor/programs/winmem/: Cargo.toml
programs/winmem-anchor/programs/winmem/src/: lib.rs  state.rs
programs/winmem-anchor/programs/winmem/src/instructions/: init_project.rs  mod.rs  post_root.rs  rotate_auth.rs
programs/winmem-anchor/tests/: winmem.ts
winmem_git/: PULL_REQUEST_TEMPLATE.md
winmem_git/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
winmem_git/workflows/: ci.yml  codeql.yml  docker-build.yml  e2e.yml  helm-release.yml  lint.yml  release.yml  security-scan.yml  test.yml
(+39 files in other folders)
